--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +14,9 @@
     "body-parser": "^1.20.0",
     "concurrently": "^7.3.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.4.4",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "mongoose": "^6.13.8",
     "nodemon": "^2.0.19"
   }
 }
